# antifrod_analyze

./: README.md  fraud_analysis_results.xlsx  functions.py  main.py  pyproject.toml  services.py  Тестовое_задание_2_Антифрод_аналитик.xlsx
src/: fraud_by_amount.py  fraud_by_repeated_amount.py  funcs_by_pd.py  functions.py
